Added concept of admin users and job groups. UI fixes.  Added ability to manually specify custom groups for creating SSN. Ability to turn off bigscape code

--- a/efi-gnt/conf/settings.inc.php.example
+++ b/efi-gnt/conf/settings.inc.php.example
@@ -39,6 +39,7 @@ define("__MYSQL_AUTH_DATABASE__","");
 //
 // UI PARAMETERS
 define("__TITLE__","EFI GNT");
+define("__ENABLE_BIGSCAPE__",false);
 
 //
 // JOB SCHEDULING PARAMETERS
