Added additional files/dirs for git to ignore.

--- a/.gitignore
+++ b/.gitignore
@@ -5,4 +5,7 @@ uploads
 settings.inc.php
 settings_base.inc.php
 remove_old_uploads.sh
+user_auth.class.inc.php.const
+family_info.tab
+sync_output
 
