Added support for DIAMOND version of ShortBRED.

--- a/shortbred/conf/settings.inc.php.example
+++ b/shortbred/conf/settings.inc.php.example
@@ -43,7 +43,8 @@ define("__TITLE__","EFI/ShortBRED");
 define("__CLUSTER_USER__","");
 define("__IDENTIFY_SCRIPT__","");
 define("__QUANTIFY_SCRIPT__","");
-define("__SHORTBRED_MODULE__","");
+define("__SHORTBRED_BLAST_MODULE__","shortbred/devlocal");
+define("__SHORTBRED_DIAMOND_MODULE__","shortbred/diamond/devlocal");
 define("__EFIDB_MODULE__","");
 define("__ENABLE_LOG__",true);
 define("__NUM_PROCESSORS__",24);
