Added CANCELLED global constant.

--- a/conf/settings_base.inc.php.example
+++ b/conf/settings_base.inc.php.example
@@ -40,6 +40,7 @@ define("__NEW__","NEW");
 define("__RUNNING__","RUNNING");
 define("__FINISH__","FINISH");
 define("__FAILED__","FAILED");
+define("__CANCELLED__","CANCELLED");
 
 //
 // DEFAULTS
