--- a/efi-gnt/conf/settings.inc.php.example
+++ b/efi-gnt/conf/settings.inc.php.example
@@ -52,7 +52,7 @@ define("__SYNC_GNN_SCRIPT__","");
 define("__PROCESS_DIAGRAM_SCRIPT__","");
 define("__PROCESS_BIGSCAPE_SCRIPT__","");
 define("__GNN_MODULE__","");
-define("__EFIDB_MODULE__","");
+define("__EFI_DB_MODULE__","");
 define("__BLAST_MODULE__","");
 define("__ENABLE_LOG__",false);
 define("__ENABLE_LEGACY__",false);
