Added global archived status value.

--- a/conf/settings_base.inc.php.example
+++ b/conf/settings_base.inc.php.example
@@ -41,6 +41,7 @@ define("__RUNNING__","RUNNING");
 define("__FINISH__","FINISH");
 define("__FAILED__","FAILED");
 define("__CANCELLED__","CANCELLED");
+define("__ARCHIVED__","ARCHIVED");
 
 //
 // DEFAULTS
