Added flag to enable/disable InterPro support in GNDs.

--- a/efi-gnt/conf/settings.inc.php.example
+++ b/efi-gnt/conf/settings.inc.php.example
@@ -44,6 +44,7 @@ define("__MYSQL_AUTH_DATABASE__","");
 // UI PARAMETERS
 define("__TITLE__","EFI GNT");
 define("__ENABLE_BIGSCAPE__",false);
+define("__ENABLE_INTERPRO__",false);
 
 //
 // JOB SCHEDULING PARAMETERS
