--- a/shortbred/conf/settings.inc.php.example
+++ b/shortbred/conf/settings.inc.php.example
@@ -39,6 +39,7 @@ define("__MYSQL_DATABASE__","");
 // UI PARAMETERS
 define("__TITLE__","EFI/ShortBRED");
 define("__ENABLE_DIAMOND__",false);
+define("__CGFP_APP_EMAIL__","");
 
 //
 // JOB SCHEDULING PARAMETERS
