Added citation to EFI-EST emails and cite us link to GNT footer.

--- a/efi-gnt/conf/settings.inc.php.example
+++ b/efi-gnt/conf/settings.inc.php.example
@@ -21,6 +21,7 @@ define("__UPLOAD_DIR__","");
 define("__LOG_FILE__","");
 define("__WEB_PATH__","");
 define("__WEB_ROOT__","");
+define("__CGFP_WEB_PATH__","");
 
 //
 // FILE INFO
