--- a/efi-gnt/conf/settings.inc.php.example
+++ b/efi-gnt/conf/settings.inc.php.example
@@ -46,6 +46,7 @@ define("__MYSQL_AUTH_DATABASE__","");
 define("__TITLE__","EFI GNT");
 define("__ENABLE_BIGSCAPE__",false);
 define("__ENABLE_INTERPRO__",false);
+define("__NUM_DIAGRAMS_PER_PAGE__",50);
 
 //
 // JOB SCHEDULING PARAMETERS
