--- a/efi-gnt/conf/settings.inc.php.example
+++ b/efi-gnt/conf/settings.inc.php.example
@@ -8,7 +8,7 @@
 //                                              
 ////////////////////////////////////
 
-require_once("../../conf/settings_base.inc.php");
+require_once(__DIR__."../../conf/settings_base.inc.php");
 
 //
 // PATHS
@@ -21,7 +21,7 @@ define("__UPLOAD_DIR__","");
 define("__LOG_FILE__","");
 define("__WEB_PATH__","");
 define("__WEB_ROOT__","");
-define("__CGFP_WEB_PATH__","");
+define("__CGFP_WEB_ROOT__","");
 
 //
 // FILE INFO
@@ -50,6 +50,7 @@ define("__NUM_DIAGRAMS_PER_PAGE__",50);
 
 //
 // JOB SCHEDULING PARAMETERS
+define("__CLUSTER_SCHEDULER__","local"); //local,torque,slurm
 define("__GNN_SCRIPT__","");
 define("__SYNC_GNN_SCRIPT__","");
 define("__PROCESS_DIAGRAM_SCRIPT__","");
@@ -63,18 +64,11 @@ define("__ENABLE_LEGACY__",false);
 //
 // DEFAULTS
 define("__DEFAULT_NEIGHBOR_SIZE__",10);
-define("__MAX_TIMEOUT__","3600");
 define("__COOCCURRENCE__",20);
-define("__RETENTION_DAYS__","7");
 define("__DEFAULT_EVALUE__","5");
 define("__DEFAULT_NUM_BLAST_SEQ__","200");
 define("__MAX_NUM_BLAST_SEQ__","500");
 define("__DEFAULT_NEIGHBORHOOD_SIZE__","10");
-
-//
-// LEGACY
-define("__CLUSTER_USER__","");
-define("__CLUSTER_SCHEDULER__","local"); //local,torque,slurm
 
 define("__SYNC_KEYS__","");
 
