--- a/efi-gnt/conf/settings.inc.php.example
+++ b/efi-gnt/conf/settings.inc.php.example
@@ -27,6 +27,7 @@ define("__CGFP_WEB_ROOT__","");
 // FILE INFO
 define("__RELATIVE_OUTPUT_DIR__","");
 define("__RELATIVE_SYNC_OUTPUT_DIR__","");
+define("__RELATIVE_DIAGRAM_OUTPUT_DIR__","");
 define("__LEGACY_RELATIVE_OUTPUT_DIR__","");
 define("__VALID_FILE_TYPE__","xgmml zip");
 define("__VALID_DIAGRAM_FILE_TYPE__","sqlite");
