Improved config file documentation and support unified database.

--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@ uploads
 settings.inc.php
 settings_shared.inc.php
 settings_base.inc.php
+settings_examples.inc.php
 remove_old_uploads.sh
 user_auth.class.inc.php.const
 family_info.tab
