--- a/conf/settings.inc.php.example
+++ b/conf/settings.inc.php.example
@@ -17,13 +17,12 @@ define("__WEB_ROOT__",__BASE_WEB_ROOT__."".__WEB_PATH__);
 
 //
 // DATABASE
-define("__MYSQL_HOST__","localhost");
-define("__MYSQL_USER__","efi_web");
-define("__MYSQL_PASSWORD__","");
-define("__MYSQL_DATABASE__","efi");
-define("__MYSQL_AUTH_DATABASE__","efi");
-
 //
-// UI
-define("__USE_DASHBOARD__",true);
+// Change this if the database isn't hosted locally
+define("__MYSQL_HOST__","localhost");
+define("__MYSQL_DATABASE__",__GLOBAL_MYSQL_DATABASE__);
+define("__MYSQL_USER__",__GLOBAL_MYSQL_USER__);
+define("__MYSQL_PASSWORD__",__GLOBAL_MYSQL_PASSWORD__);
+define("__MYSQL_AUTH_DATABASE__",__GLOBAL_AUTH_DATABASE__);
+
 
