--- a/conf/settings.inc.php.example
+++ b/conf/settings.inc.php.example
@@ -19,7 +19,7 @@ define("__WEB_ROOT__",__BASE_WEB_ROOT__."".__WEB_PATH__);
 // DATABASE
 define("__MYSQL_HOST__","localhost");
 define("__MYSQL_USER__","efi_test");
-define("__MYSQL_PASSWORD__","***REMOVED***");
+define("__MYSQL_PASSWORD__","dO2uXiZt4cc3skIsVn0i");
 define("__MYSQL_DATABASE__","efi_user_auth_dev");
 define("__MYSQL_AUTH_DATABASE__","efi_user_auth_dev");
 
