--- a/conf/settings_base.inc.php.example
+++ b/conf/settings_base.inc.php.example
@@ -149,4 +149,4 @@ define("__EFI_EST_DB_NAME__",__MYSQL_DATABASE__);
 define("__EFI_SHORTBRED_DB_NAME__",__MYSQL_DATABASE__);
 
 
-require_once(__DIR__."/settings.paths.inc.php");
+require_once(__DIR__."/settings_paths.inc.php");
