--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,22 @@
         "rulin132/jpgraph": ">=4.0",
         "phpoffice/phpspreadsheet": ">=1.14",
         "pear/mail_mime": ">=1.8",
-        "pear/mail": ">=1.2"
+        "pear/mail": ">=1.2",
+        "components/jquery": "3.4.1",
+        "components/jqueryui": "1.12.1",
+        "twbs/bootstrap": "4.4.1",
+        "fortawesome/font-awesome": "5.12.1",
+        "twig/twig": "^3.0"
+    },
+    "scripts": {
+        "post-update-cmd": [
+            "mkdir -p html/vendor/twbs",
+            "mkdir -p html/vendor/components",
+            "mkdir -p html/vendor/fortawesome",
+            "cp -R vendor/twbs/bootstrap html/vendor/twbs/",
+            "cp -R vendor/components/jquery html/vendor/components/",
+            "cp -R vendor/components/jqueryui html/vendor/components/",
+            "cp -R vendor/fortawesome/font-awesome html/vendor/fortawesome/"
+        ]
     }
 }
