--- a/conf/settings_base.inc.php.example
+++ b/conf/settings_base.inc.php.example
@@ -68,6 +68,7 @@ define("__ENABLE_WEBSITE__",true);              // This can take the site down f
                                                 // display a message [USEFUL FOR ADMINS]
 define("__ENABLE_ADVANCED_OPTIONS__",true);     // This enables advanced options (for internal use
                                                 // or software development only) 
+define("__ENABLE_FAMILY_RESOURCES__",false);
 //define("__BETA_RELEASE__","BETA --");         // This is used when an installation is used as a
                                                 // beta/testing site, and adds the text as a banner
                                                 // on each page, and email. Uncomment to enable.
