--- a/conf/efi_est/settings.inc.php.example
+++ b/conf/efi_est/settings.inc.php.example
@@ -40,6 +40,8 @@ define("__RESULTS_DIRNAME__","results");
 define("__RESULTS_EXAMPLE_DIRNAME__","results_example");
 define("__RESULTS_EXAMPLE_DIR__","DIR_PATH");   // If an example with results is provided, set this to the path to the dir containing the example files [OPTIONAL]
 
+define("__UPDATE_MESSAGE__","");
+
 //
 // UI SETTINGS
 // Maximum number of SSN nodes that are supported (parameter that is passed to the backend tools)
