--- a/conf/settings_base.inc.php.example
+++ b/conf/settings_base.inc.php.example
@@ -103,6 +103,7 @@ define("__EST_WEB_PATH__",__BASE_WEB_PATH__."/efi-est");
 define("__GNT_WEB_PATH__",__BASE_WEB_PATH__."/efi-gnt");
 define("__CGFP_WEB_PATH__",__BASE_WEB_PATH__."/efi-cgfp");
 define("__TAXONOMY_WEB_PATH__",__BASE_WEB_PATH__."/taxonomy");
+define("__TRAINING_WEB_PATH__",__BASE_WEB_PATH__."/training");
 define("__EST_URL__",__BASE_WEB_ROOT__."/".__EST_WEB_PATH__);
 
 define("__SHORTBRED_USER_GROUP__","");
