--- a/conf/settings_base.inc.php.example
+++ b/conf/settings_base.inc.php.example
@@ -43,6 +43,7 @@ define("__NORMAL_QUEUE__","");                  // The partition/queue to submit
 
 define("__BASE_RESULTS_DIR__","");              // Set to the directory where results are stored; each job type will have a separate sub directory
 define("__EST_RESULTS_DIR__",__BASE_RESULTS_DIR__."/est");  // Set to the directory where results are stored for EST
+define("__TEMP_DIR__","");                      // Where the queue status gets written to
 define("__CLUSTER_USER__","");                  // Set to the user that jobs are submitted under 
 
 // Database that tables for all tools are stored in, including auth. They can be set to
