--- a/composer.json
+++ b/composer.json
@@ -33,8 +33,8 @@
             "url": "https://www.github.com/EnzymeFunctionInitiative/taxonomy"
         },
         {
-            "type": "path",
-            "url": "/home/n-z/noberg/dev/sunburst"
+            "type": "vcs",
+            "url": "https://github.com/EnzymeFunctionInitiative/sunburst.git"
         }
     ],
     "scripts": {
