--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,8 @@
         "php-console/php-console": "^3.1",
         "igbillinois/igbillinois-php": "main-dev",
         "efiillinois/taxonomy": "main-dev",
-        "efiillinois/sunburst": "main-dev"
+        "efiillinois/sunburst": "main-dev",
+        "php-di/php-di": "6.4.0"
     },
     "require-dev": {
         "phpmd/phpmd" : "@stable"
